--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ button:hover {
 @media screen and (min-width: 768px) {
   main {
     flex-direction: row;
+    max-width: 560px;
   }
   picture > img {
     border-radius: 8px 0 0 8px;
